# weather-app

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
src/: config.py
src/app/: cache.py  main.py  utils.py
src/frontend/static/css/: base.css  cards.css  footer.css  gauge.css  header.css  index.css  layout.css  main.css  reset.css  style.css  weather.css
src/frontend/static/js/: gauge.js
src/frontend/templates/: base.html  index.html
src/frontend/templates/partials/: daily_weather_card.html  general_status_container.html  header.html  insights_card.html  today_status_container.html  weather_card.html
src/scraper/: __init__.py
src/scraper/locations_api/: __init__.py  config.py  main.py
src/scraper/visualcrossing_api/: __init__.py  config.py  main.py
src/scraper/weather_api/: __init__.py  config.py  main.py  utils.py
