[project]
name = "weather-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "jinja2>=3.1.4",
    "plotly>=5.24.1",
    "polars>=1.17.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
    "types-redis>=4.6.0.20241004",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    "Q000", # quotes: single quotes are preferred
    "D212", # multi-line-summary-first-line: clashes with D213
    "D",    # pydocstyle: removed during early development
]
